wrote tests and refactored to more of an o-o

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "tic tac toe",
   "main": "index.js",
   "scripts": {
-    "test": "mocha text.js",
+    "test": "mocha test.js",
     "start": "node index.js"
   },
   "repository": {
